[gd_scene load_steps=18 format=4 uid="uid://dcseeo4edb124"]

[ext_resource type="Script" uid="uid://cyx3egm4xdjgy" path="res://texture_rect.gd" id="2_fu7sn"]
[ext_resource type="Script" uid="uid://dd7x6lvepgnwa" path="res://main_page.gd" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://cijjqdxi77gkv" path="res://Assets/Infopanel-Standard-1000-Grundskylt.jpg" id="2_nlkkf"]
[ext_resource type="Script" uid="uid://cydrr8m8e2kkr" path="res://option_page.gd" id="4_jix8l"]
[ext_resource type="Script" uid="uid://o1vtsqe24u6m" path="res://game.gd" id="5_glbon"]
[ext_resource type="PackedScene" uid="uid://bioh23pq4uiaj" path="res://player.tscn" id="6_nlkkf"]
[ext_resource type="Texture2D" uid="uid://dgj6oelmjt43m" path="res://Assets/hextilesorganized 8x.png" id="7_dy7ct"]
[ext_resource type="Texture2D" uid="uid://5734j5x0gh8p" path="res://Assets/2.png" id="8_0o4t1"]
[ext_resource type="Texture2D" uid="uid://p0u7utpfh50c" path="res://Assets/meme.png" id="9_0k4wn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(3.65794e-06, 0.697835, 0.599881, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(8.27849e-06, 0.918432, 0.874235, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fu7sn"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(6.61798e-07, 0.276431, 0.297223, 1)
thickness = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.864184, 0.460896, 0.503466, 1)
border_width_left = 80
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.929412, 0.788235, 0)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 80.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j5v2v"]
texture = ExtResource("7_dy7ct")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:2/0 = 0
8:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iotk1"]
texture = ExtResource("8_0o4t1")
texture_region_size = Vector2i(206, 186)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w44g7"]
texture = ExtResource("9_0k4wn")
texture_region_size = Vector2i(488, 335)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_cm266"]
tile_shape = 3
tile_layout = 5
tile_size = Vector2i(198, 120)
sources/1 = SubResource("TileSetAtlasSource_j5v2v")
sources/2 = SubResource("TileSetAtlasSource_iotk1")
sources/3 = SubResource("TileSetAtlasSource_w44g7")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPage" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_glbon")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 390.0
offset_top = 324.0
offset_right = 729.0
offset_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Start" type="Button" parent="MainPage/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="Option" type="Button" parent="MainPage/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="Info" type="Button" parent="MainPage/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Info"

[node name="Quit" type="Button" parent="MainPage/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="InfoPannel" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_nlkkf")
script = ExtResource("2_fu7sn")

[node name="Infopanel-standard-1000-grundskylt" type="Sprite2D" parent="InfoPannel"]
position = Vector2(574, 322)
scale = Vector2(1.43925, 1.20989)

[node name="Label" type="Label" parent="InfoPannel"]
layout_mode = 0
offset_left = 559.0
offset_top = 125.0
offset_right = 599.0
offset_bottom = 148.0
text = "Info:"

[node name="Label2" type="Label" parent="InfoPannel"]
layout_mode = 0
offset_left = 445.0
offset_top = 213.0
offset_right = 714.0
offset_bottom = 236.0
scale = Vector2(1.23183, 2.47654)
text = "oh yeah we have info here oh yeah"

[node name="Button" type="Button" parent="InfoPannel"]
layout_mode = 0
offset_left = 445.0
offset_top = 413.0
offset_right = 770.0
offset_bottom = 537.0
text = "go back to where you came from"

[node name="OptionPage" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_jix8l")

[node name="Label" type="Label" parent="OptionPage"]
layout_mode = 0
offset_left = 459.0
offset_top = 61.0
offset_right = 650.0
offset_bottom = 110.0
text = "Choose your champion...
i mean settings"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionPage"]
layout_mode = 0
offset_left = 422.0
offset_top = 133.0
offset_right = 691.0
offset_bottom = 564.0

[node name="PanelContainer" type="PanelContainer" parent="OptionPage/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu7sn")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionPage/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="OptionPage/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionPage/VBoxContainer/PanelContainer/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
text = "Volume"

[node name="HSlider2" type="HSlider" parent="OptionPage/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
value = 50.0

[node name="PanelContainer4" type="PanelContainer" parent="OptionPage/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu7sn")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionPage/VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="Control" type="Control" parent="OptionPage/VBoxContainer/PanelContainer4/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionPage/VBoxContainer/PanelContainer4/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
text = "Volume"

[node name="HSlider2" type="HSlider" parent="OptionPage/VBoxContainer/PanelContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
value = 50.0

[node name="PanelContainer5" type="PanelContainer" parent="OptionPage/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu7sn")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionPage/VBoxContainer/PanelContainer5"]
layout_mode = 2

[node name="Control" type="Control" parent="OptionPage/VBoxContainer/PanelContainer5/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionPage/VBoxContainer/PanelContainer5/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
text = "Volume"

[node name="HSlider2" type="HSlider" parent="OptionPage/VBoxContainer/PanelContainer5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_fu7sn")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_jix8l")
value = 50.0

[node name="PanelContainer2" type="PanelContainer" parent="OptionPage/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu7sn")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionPage/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="OptionPage/VBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionPage/VBoxContainer/PanelContainer2/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
text = "Full?"

[node name="CheckButton" type="CheckButton" parent="OptionPage/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer3" type="PanelContainer" parent="OptionPage/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu7sn")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionPage/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Control" type="Control" parent="OptionPage/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="Label" type="Label" parent="OptionPage/VBoxContainer/PanelContainer3/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
text = "Volume"

[node name="HSlider" type="HSlider" parent="OptionPage/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_jix8l")
rounded = true

[node name="Button" type="Button" parent="OptionPage"]
layout_mode = 0
offset_left = 502.0
offset_top = 329.0
offset_right = 603.0
offset_bottom = 373.0
text = "Biok"

[node name="Game" type="Node2D" parent="."]
visible = false
script = ExtResource("5_glbon")

[node name="Player" parent="Game" instance=ExtResource("6_nlkkf")]
z_index = 22
position = Vector2(436, 314)
scale = Vector2(2, 2)

[node name="TestMap" type="Node2D" parent="."]
visible = false

[node name="TileMapLayer" type="TileMapLayer" parent="TestMap"]
position = Vector2(408, 232)
tile_map_data = PackedByteArray("AAD7//3/AgAAAAAAAAD7//z/AgAAAAAAAAD7//v/AgAAAAAAAAD8//v/AgAAAAAAAAD9//v/AgAAAAAAAAD8//z/AgAAAAAAAADz//7/AgAAAAAAAAD0//7/AgAAAAAAAAD1//7/AgAAAAAAAAD2//7/AgAAAAAAAAD3//7/AgAAAAAAAAD4//7/AgAAAAAAAAD4/wAAAgAAAAAAAAD3/wAAAgAAAAAAAAD3/wEAAgAAAAAAAAD2/wAAAgAAAAAAAAD2/wEAAgAAAAAAAAD1/wAAAgAAAAAAAAD1/wEAAgAAAAAAAAD0/wAAAgAAAAAAAAD0/wEAAgAAAAAAAADz/wAAAgAAAAAAAAANABEAAgAAAAAAAAAbAO//AQAAAAAAAAAeAO3/AQAAAAAAAAAeAOz/AQAAAAAAAAAeAOv/AQAAAAAAAAAdAOv/AQAAAAAAAAAdAOr/AQAAAAAAAAAdAOn/AQAAAAAAAAAdAOj/AQAAAAAAAAAcAOj/AQAAAAAAAAAcAOf/AQAAAAAAAAAdAOf/AQAAAAAAAAAeAOj/AQAAAAAAAAAfAOj/AQAAAAAAAAAfAOn/AQAAAAAAAAAgAOn/AQAAAAAAAAAhAOn/AQAAAAAAAAAiAOn/AQAAAAAAAAAjAOn/AQAAAAAAAAAjAOj/AQAAAAAAAAAiAOj/AQAAAAAAAAAiAOf/AQAAAAAAAAAiAOb/AQAAAAAAAAAiAOX/AQAAAAAAAAAiAOT/AQAAAAAAAAAiAOP/AQAAAAAAAAAjAOT/AQAAAAAAAAAkAOT/AQAAAAAAAAAlAOT/AQAAAAAAAAAlAOX/AQAAAAAAAAAmAOX/AQAAAAAAAAAnAOX/AQAAAAAAAAAeAP//AQABAAEAAAAdAP3/AQABAAEAAAAeAPz/AQABAAEAAAAfAP7/AQABAAEAAAAhAAMAAQAAAAAAAAAiAAQAAQAAAAAAAAAjAAQAAQAAAAAAAAAjAAUAAQAAAAAAAAAjAAYAAQAAAAAAAAAjAAcAAQAAAAAAAAAjAAgAAQAAAAAAAAAjAAkAAQAAAAAAAAAkAAkAAQAAAAAAAAAjAAoAAQAAAAAAAAAiAAsAAQAAAAAAAAAiAAwAAQAAAAAAAAAhAA0AAQAAAAAAAAAgAA4AAQAAAAAAAAAfAA8AAQAAAAAAAAAfAA4AAQAAAAAAAAAeAA4AAQAAAAAAAAAeAA0AAQAAAAAAAAAdAA0AAQAAAAAAAAAdAAwAAQAAAAAAAAAcAAwAAQAAAAAAAAAdAAsAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAAkAAQAAAAAAAAAfAAgAAQAAAAAAAAAgAAcAAQAAAAAAAAAhAAYAAQAAAAAAAAAiAAUAAQAAAAAAAAAkAAQAAQAAAAAAAAAlAAMAAQAAAAAAAAAmAAIAAQAAAAAAAAAnAAEAAQAAAAAAAAAnAAAAAQAAAAAAAAAoAP//AQAAAAAAAAApAPz/AQAAAAAAAAApAPv/AQAAAAAAAAAmAPj/AQABAAEAAAAkAPn/AQABAAEAAAAlAP//AQABAAEAAAAlAAEAAQAAAAAAAAAmAAEAAQAAAAAAAAAnAAIAAQAAAAAAAAAoAAIAAQAAAAAAAAApAAEAAQAAAAAAAAAqAAEAAQAAAAAAAAArAAAAAQAAAAAAAAAsAP//AQAAAAAAAAAtAP7/AQAAAAAAAAAuAP3/AQAAAAAAAAAvAPz/AQAAAAAAAAAwAPv/AQAAAAAAAAAwAPr/AQAAAAAAAAAwAPn/AQAAAAAAAAAwAPj/AQAAAAAAAAAwAPf/AQAAAAAAAAAwAPX/AQAAAAAAAAAvAPT/AQAAAAAAAAAvAPD/AQABAAEAAAAuAPD/AQAAAAAAAAAtAO7/AQAAAAAAAAAsAO//AQAAAAAAAAArAPD/AQAAAAAAAAAqAPH/AQAAAAAAAAArAPP/AQABAAEAAAAsAPP/AQABAAEAAAA1AO3/AQAAAAAAAAA2AOz/AQAAAAAAAAA3AOz/AQAAAAAAAAA4AOz/AQAAAAAAAAA5AOv/AQAAAAAAAAA5AO7/AQAAAAAAAAA5AO//AQAAAAAAAAA4APD/AQAAAAAAAAA3APH/AQAAAAAAAAA3APL/AQAAAAAAAAA2APP/AQAAAAAAAAA2APT/AQAAAAAAAAA2APX/AQAAAAAAAAA1APb/AQAAAAAAAAA0APb/AQAAAAAAAAA0APX/AQAAAAAAAAAdAAAAAQABAAEAAAAgAP3/AQABAAEAAAAhAPz/AQABAAEAAAAfAPv/AQABAAEAAAAgAPr/AQABAAEAAAAiAPv/AQABAAEAAAAiAPj/AQABAAEAAAAjAPf/AQABAAEAAAAkAPb/AQABAAEAAAAjAPr/AQABAAEAAAAhAPn/AQABAAEAAAAoAPb/AQABAAEAAAAnAP3/AQABAAEAAAAmAP7/AQABAAEAAAAuAO3/AQABAAEAAAAvAO//AQABAAEAAAAuAPH/AQABAAEAAAAlAPX/AQABAAEAAAAmAPT/AQABAAEAAAAsAPL/AQABAAEAAAAtAPL/AQABAAEAAAArAPX/AQABAAEAAAAoAPz/AQABAAEAAAAqAPT/AQABAAEAAAAeAPj/AwAAAAAAAAAcAP3/AwAAAAAAAAAbAP7/AwAAAAAAAAAfAPX/AwAAAAAAAAAdAPn/AwAAAAAAAAD+/wEAAgAAAAAAAAD//wAAAgAAAAAAAAAAAAAAAgAAAAAAAAD//wEAAgAAAAAAAAAAAP//AgAAAAAAAAABAP//AgAAAAAAAAABAAAAAgAAAAAAAAABAAEAAgAAAAAAAAAAAAEAAgAAAAAAAAD//wIAAgAAAAAAAAD+/wAAAgAAAAAAAAD/////AgAAAAAAAAAAAAIAAgAAAAAAAAD//wMAAgAAAAAAAAD+/wMAAgAAAAAAAAD+/wIAAgAAAAAAAAACAP//AgAAAAAAAAACAAAAAgAAAAAAAAACAAEAAgAAAAAAAAABAAIAAgAAAAAAAAAAAP7/AgAAAAAAAAABAP7/AgAAAAAAAAACAP7/AgAAAAAAAAAAAAMAAgAAAAAAAAD9/wMAAgAAAAAAAAD9/wIAAgAAAAAAAAD9/wEAAgAAAAAAAAADAAAAAgAAAAAAAAACAAIAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAADAAIAAgAAAAAAAAACAAMAAgAAAAAAAAABAAMAAgAAAAAAAAACAP3/AgAAAAAAAAADAP3/AgAAAAAAAAADAP7/AgAAAAAAAAADAP//AgAAAAAAAAADAAEAAgAAAAAAAAAAAAQAAgAAAAAAAAD//wQAAgAAAAAAAAD+/wUAAgAAAAAAAAD9/wUAAgAAAAAAAAD9/wQAAgAAAAAAAAD8/wQAAgAAAAAAAAAEAP//AgAAAAAAAAADAAMAAgAAAAAAAAACAAQAAgAAAAAAAAABAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAD//wYAAgAAAAAAAAD+/wcAAgAAAAAAAAD9/wcAAgAAAAAAAAD8/wcAAgAAAAAAAAD8/wYAAgAAAAAAAAD8/wUAAgAAAAAAAAAEAAIAAgAAAAAAAAABAAQAAgAAAAAAAAABAP3/AgAAAAAAAAAEAP3/AgAAAAAAAAAEAP7/AgAAAAAAAAD+/wQAAgAAAAAAAAAAAAUAAgAAAAAAAAD+/wYAAgAAAAAAAAD9/wYAAgAAAAAAAAD//wUAAgAAAAAAAAD8/wMAAgAAAAAAAAD8/wIAAgAAAAAAAAD8/wEAAwAAAAAAAAD9/wAAAwAAAAAAAAD+////AgAAAAAAAAD///7/AgAAAAAAAAAAAP3/AgAAAAAAAAABAPz/AgAAAAAAAAACAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAIAP7/AgAAAAAAAAAIAP//AgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAIAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAFAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAADAAcAAgAAAAAAAAACAAgAAgAAAAAAAAABAAgAAgAAAAAAAAABAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAcAAgAAAAAAAAD//wgAAgAAAAAAAAD//wcAAgAAAAAAAAD+/wgAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAUAAgAAAAAAAAAGAAQAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAP//AgAAAAAAAAAGAP//AgAAAAAAAAAGAAAAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAEAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAP//AgAAAAAAAAAFAP7/AgAAAAAAAAAFAAUAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAYAAgAAAAAAAAAEAAYAAgAAAAAAAAADAAUAAgAAAAAAAAADAAQAAgAAAAAAAAAEAAMAAgAAAAAAAAACAAYAAgAAAAAAAAACAAUAAgAAAAAAAAABAAYAAgAAAAAAAAAEAAgAAgAAAAAAAAADAAgAAgAAAAAAAAD9/wgAAgAAAAAAAAD8/wgAAgAAAAAAAAADAPz/AgAAAAAAAAAEAPz/AgAAAAAAAAAFAPz/AgAAAAAAAAAGAPz/AgAAAAAAAAAHAPz/AgAAAAAAAAAIAPz/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAAUAAgAAAAAAAAAGAAkAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAcAAgAAAAAAAAAHAAkAAgAAAAAAAAAJAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAFAAkAAgAAAAAAAAAFAAoAAgAAAAAAAAAEAAkAAgAAAAAAAAAEAAoAAgAAAAAAAAADAAoAAgAAAAAAAAACAAkAAgAAAAAAAAADAAkAAgAAAAAAAAAGAAoAAgAAAAAAAAAHAAoAAgAAAAAAAAAIAAoAAgAAAAAAAAAJAAkAAgAAAAAAAAAKAAcAAgAAAAAAAAAJAAYAAgAAAAAAAAAKAAYAAgAAAAAAAAAJAAUAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAP//AgAAAAAAAAAJAP7/AgAAAAAAAAAJAP3/AgAAAAAAAAAKAP//AgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAAKAP7/AgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAAKAAUAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAJAAoAAgAAAAAAAAAIAAsAAgAAAAAAAAACAAoAAgAAAAAAAAABAAoAAgAAAAAAAAAAAAoAAgAAAAAAAAD//wkAAgAAAAAAAAD//woAAgAAAAAAAAD+/wkAAgAAAAAAAAD9/wkAAgAAAAAAAAAAAAkAAgAAAAAAAAABAAkAAgAAAAAAAAACAAsAAgAAAAAAAAABAAsAAgAAAAAAAAAAAAsAAgAAAAAAAAD//wsAAgAAAAAAAAD+/woAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAAJAAsAAgAAAAAAAAABAPv/AgAAAAAAAAACAPv/AgAAAAAAAAACAPr/AgAAAAAAAAACAPn/AgAAAAAAAAADAPn/AgAAAAAAAAAEAPn/AgAAAAAAAAAFAPr/AgAAAAAAAAAGAPr/AgAAAAAAAAAHAPv/AgAAAAAAAAALAP//AgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAAJAPz/AgAAAAAAAAAJAPv/AgAAAAAAAAAKAPv/AgAAAAAAAAALAPz/AgAAAAAAAAAMAP3/AgAAAAAAAAAMAP7/AgAAAAAAAAAMAP//AgAAAAAAAAAMAAAAAgAAAAAAAAALAP7/AgAAAAAAAAALAP3/AgAAAAAAAAAEAAwAAgAAAAAAAAADAAwAAgAAAAAAAAAFAPv/AgAAAAAAAAD+//7/AgAAAAAAAAD+//3/AgAAAAAAAAD+//z/AgAAAAAAAAD///3/AgAAAAAAAAAHAA0AAgAAAAAAAAAHAA4AAgAAAAAAAAAGAA0AAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA0AAgAAAAAAAAAJAA0AAgAAAAAAAAAJAA4AAgAAAAAAAAAIAA4AAgAAAAAAAAAIAA0AAgAAAAAAAAAJAAwAAgAAAAAAAAAFAA0AAgAAAAAAAAAFAAwAAgAAAAAAAAAEAA0AAgAAAAAAAAADAA0AAgAAAAAAAAACAAwAAgAAAAAAAAABAAwAAgAAAAAAAAACAA0AAgAAAAAAAAAAAA0AAgAAAAAAAAD//w0AAgAAAAAAAAD//wwAAgAAAAAAAAD+/wwAAgAAAAAAAAD+/wsAAgAAAAAAAAD9/woAAgAAAAAAAAD8/wkAAgAAAAAAAAD7/woAAgAAAAAAAAD7/wkAAgAAAAAAAAD7/wgAAgAAAAAAAAD7/wYAAgAAAAAAAAD6/wYAAgAAAAAAAAD6/wUAAgAAAAAAAAD7/wQAAgAAAAAAAAD7/wUAAgAAAAAAAAD7/wMAAgAAAAAAAAD6/wQAAgAAAAAAAAD5/wUAAgAAAAAAAAD4/wYAAgAAAAAAAAD4/wUAAgAAAAAAAAD5/wYAAgAAAAAAAAD4/wcAAgAAAAAAAAD3/wcAAgAAAAAAAAD2/wgAAgAAAAAAAAADAPv/AgAAAAAAAAAEAPv/AgAAAAAAAAAGAPv/AgAAAAAAAAAHAPr/AgAAAAAAAAAIAPv/AgAAAAAAAAAJAPr/AgAAAAAAAAD6/wkAAgAAAAAAAAD5/woAAgAAAAAAAAD4/wsAAgAAAAAAAAAKAPz/AgAAAAAAAAALAPv/AgAAAAAAAAD6/wsAAgAAAAAAAAD8/wsAAgAAAAAAAAD7/wwAAgAAAAAAAAAKAP3/AgAAAAAAAAAMAPr/AgAAAAAAAAANAPn/AgAAAAAAAAAOAPj/AgAAAAAAAAAOAPn/AgAAAAAAAAANAPr/AgAAAAAAAAAMAPv/AgAAAAAAAAAMAPz/AgAAAAAAAAANAPz/AgAAAAAAAAAAAAwAAgAAAAAAAAD+/w4AAgAAAAAAAAD9/w8AAgAAAAAAAAD8/w8AAgAAAAAAAAD8/xAAAgAAAAAAAAD9/w4AAgAAAAAAAAD+/w0AAgAAAAAAAAANAAEAAgAAAAAAAAAOAAAAAgAAAAAAAAABAA4AAgAAAAAAAAANAAMAAgAAAAAAAAAOAAIAAgAAAAAAAAAPAAIAAgAAAAAAAAANAAQAAgAAAAAAAAANAAcAAgAAAAAAAAAOAAYAAgAAAAAAAAAPAAUAAgAAAAAAAAAQAAQAAgAAAAAAAAAGAA4AAgAAAAAAAAAFAA8AAgAAAAAAAAAEABAAAgAAAAAAAAAEABEAAgAAAAAAAAAFABAAAgAAAAAAAAAGAA8AAgAAAAAAAAAMAAoAAgAAAAAAAAANAAkAAgAAAAAAAAAOAAgAAgAAAAAAAAAPAAcAAgAAAAAAAAALAAsAAgAAAAAAAAAIAA8AAgAAAAAAAAALAAwAAgAAAAAAAAAMAAwAAgAAAAAAAAANAAsAAgAAAAAAAAAOAAoAAgAAAAAAAAAPAAkAAgAAAAAAAAAQAAgAAgAAAAAAAAALAA0AAgAAAAAAAAAHAA8AAgAAAAAAAAAGABAAAgAAAAAAAAAFABEAAgAAAAAAAAANAAoAAgAAAAAAAAAOAAkAAgAAAAAAAAAPAAgAAgAAAAAAAAAQAAcAAgAAAAAAAAARAAYAAgAAAAAAAAARAAMAAgAAAAAAAAADABEAAgAAAAAAAAACABIAAgAAAAAAAAABABMAAgAAAAAAAAANAAYAAgAAAAAAAAAFAA4AAgAAAAAAAAAEAA8AAgAAAAAAAAADABAAAgAAAAAAAAACABAAAgAAAAAAAAAEAA4AAgAAAAAAAAANAAUAAgAAAAAAAAAOAAQAAgAAAAAAAAAPAAMAAgAAAAAAAAAQAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAADAA8AAgAAAAAAAAAQAAIAAgAAAAAAAAARAAIAAgAAAAAAAAADAA4AAgAAAAAAAAACAA4AAgAAAAAAAAABAA8AAgAAAAAAAAAAABAAAgAAAAAAAAD//xEAAgAAAAAAAAD+/xIAAgAAAAAAAAD9/xMAAgAAAAAAAAD8/xQAAgAAAAAAAAAPAAEAAgAAAAAAAAANAAIAAgAAAAAAAAAOAAEAAgAAAAAAAAAPAAAAAgAAAAAAAAAQAP//AgAAAAAAAAAPAP//AgAAAAAAAAAQAP7/AgAAAAAAAAARAP3/AgAAAAAAAAAOAP//AgAAAAAAAAANAAAAAgAAAAAAAAANAP//AgAAAAAAAAAOAP7/AgAAAAAAAAD9/w0AAgAAAAAAAAAQAAAAAgAAAAAAAAARAAAAAgAAAAAAAAAQAAEAAgAAAAAAAAARAAEAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAARAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAAPAAoAAgAAAAAAAAAOAAsAAgAAAAAAAAANAAwAAgAAAAAAAAAMAA0AAgAAAAAAAAALAA4AAgAAAAAAAAAKAA4AAgAAAAAAAAAJAA8AAgAAAAAAAAAJABAAAgAAAAAAAAAKABAAAgAAAAAAAAALAA8AAgAAAAAAAAAMAA4AAgAAAAAAAAANAA0AAgAAAAAAAAAOAAwAAgAAAAAAAAAPAAwAAgAAAAAAAAAQAAsAAgAAAAAAAAARAAoAAgAAAAAAAAASAAkAAgAAAAAAAAATAAgAAgAAAAAAAAATAAcAAgAAAAAAAAATAAYAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAQAAgAAAAAAAAATAAQAAgAAAAAAAAATAAMAAgAAAAAAAAATAAIAAgAAAAAAAAASAAIAAgAAAAAAAAASAAEAAgAAAAAAAAASAAAAAgAAAAAAAAASAP//AgAAAAAAAAARAP//AgAAAAAAAAAPAP7/AgAAAAAAAAANAP7/AgAAAAAAAAANAP3/AgAAAAAAAAAOAP3/AgAAAAAAAAAPAP3/AgAAAAAAAAAOAAMAAgAAAAAAAAARAAUAAgAAAAAAAAAQAAUAAgAAAAAAAAAOAAcAAgAAAAAAAAARAAkAAgAAAAAAAAAPAAsAAgAAAAAAAAAPAPj/AgAAAAAAAAAQAPj/AgAAAAAAAAAQAPn/AgAAAAAAAAARAPj/AgAAAAAAAAARAPn/AgAAAAAAAAASAPn/AgAAAAAAAAATAPn/AgAAAAAAAAATAPr/AgAAAAAAAAAUAPr/AgAAAAAAAAAUAPv/AgAAAAAAAAAUAPz/AgAAAAAAAAATAP3/AgAAAAAAAAATAP7/AgAAAAAAAAASAP7/AgAAAAAAAAARAP7/AgAAAAAAAAATAP//AgAAAAAAAAAUAP//AgAAAAAAAAAVAP//AgAAAAAAAAAVAAAAAgAAAAAAAAAWAAAAAgAAAAAAAAAXAAAAAgAAAAAAAAAXAAEAAgAAAAAAAAAXAAIAAgAAAAAAAAAYAAIAAgAAAAAAAAAXAAMAAgAAAAAAAAAYAAMAAgAAAAAAAAAXAAQAAgAAAAAAAAAWAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAVAAcAAgAAAAAAAAAWAAYAAgAAAAAAAAAXAAUAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAEAAgAAAAAAAAAXAP//AgAAAAAAAAAWAP//AgAAAAAAAAAWAP7/AgAAAAAAAAAVAP7/AgAAAAAAAAAUAP7/AgAAAAAAAAAYAAAAAgAAAAAAAAAYAP//AgAAAAAAAAATAAUAAgAAAAAAAAARAAQAAgAAAAAAAAAQAAYAAgAAAAAAAAARAAcAAgAAAAAAAAASAAgAAgAAAAAAAAAQAAoAAgAAAAAAAAAPAAYAAgAAAAAAAAAMAAsAAgAAAAAAAAANAAgAAgAAAAAAAAAKAA8AAgAAAAAAAAAIABEAAgAAAAAAAAAHABIAAgAAAAAAAAAGABIAAgAAAAAAAAAGABMAAgAAAAAAAAAFABMAAgAAAAAAAAAEABQAAgAAAAAAAAADABUAAgAAAAAAAAACABUAAgAAAAAAAAABABYAAgAAAAAAAAABABUAAgAAAAAAAAAAABUAAgAAAAAAAAAAABQAAgAAAAAAAAAAABMAAgAAAAAAAAABABIAAgAAAAAAAAACABEAAgAAAAAAAAANABIAAgAAAAAAAAAOABIAAgAAAAAAAAAOABEAAgAAAAAAAAAOABAAAgAAAAAAAAAPABAAAgAAAAAAAAAPABEAAgAAAAAAAAAPABIAAgAAAAAAAAAPABMAAgAAAAAAAAAOABMAAgAAAAAAAAANABQAAgAAAAAAAAANABMAAgAAAAAAAAAMABMAAgAAAAAAAAAMABIAAgAAAAAAAAAMABEAAgAAAAAAAAANABAAAgAAAAAAAAAOAA8AAgAAAAAAAAAPAA8AAgAAAAAAAAAQABAAAgAAAAAAAAAQABEAAgAAAAAAAAAQABIAAgAAAAAAAAAQAA8AAgAAAAAAAAANAA8AAgAAAAAAAAANAA4AAgAAAAAAAAARAA4AAgAAAAAAAAARAA0AAgAAAAAAAAARAAwAAgAAAAAAAAAQAAwAAgAAAAAAAAARAAsAAgAAAAAAAAALABIAAgAAAAAAAAAKABIAAgAAAAAAAAAKABEAAgAAAAAAAAAJABEAAgAAAAAAAAAHAAcAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_cm266")

[connection signal="pressed" from="MainPage/VBoxContainer/Start" to="MainPage" method="_on_start_pressed"]
[connection signal="pressed" from="MainPage/VBoxContainer/Option" to="MainPage" method="_on_option_pressed"]
[connection signal="pressed" from="MainPage/VBoxContainer/Info" to="MainPage" method="_on_info_pressed"]
[connection signal="pressed" from="MainPage/VBoxContainer/Quit" to="MainPage" method="_on_quit_pressed"]
[connection signal="pressed" from="InfoPannel/Button" to="InfoPannel" method="_on_button_pressed"]
[connection signal="pressed" from="OptionPage/Button" to="OptionPage" method="_on_button_pressed"]
